--- a/src/templates/BasicPageTemplate/basicPageTemplate.scss
+++ b/src/templates/BasicPageTemplate/basicPageTemplate.scss
@@ -1,8 +1,12 @@
 .header__container{
-  width: 1440px;
-  height: 87px;
+  max-width: 1440px;
+  height: 135px;
   
-  position: fixed;
+  position: sticky;
   top: 0; 
   left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
