--- a/src/modules/HeaderModule/style.scss
+++ b/src/modules/HeaderModule/style.scss
@@ -6,9 +6,13 @@
   top: 0; 
   left: 0;
 
+  z-index: 10;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  background: #fff;
 
   .header__menuContainer{
     width: 1248px;
